# PPPC4DMID-C

./: CMakeLists.txt  README.md
include/: cgs.h  dm-profile.h  dm-spectrum.h
src/: dm-profile.cpp  dm-spectrum.cpp  main.cpp
